# magic-stake

./: Anchor.toml  gem_bank.json  magic_stake.json  raffles.json  token_swap.json
programs/magic-stake/: Cargo.toml
programs/magic-stake/src/: lib.rs
programs/magic-stake/src/instructions/: add_rarities_to_bank.rs  add_to_bank_whitelist.rs  authorize_funder.rs  cancel_reward.rs  cancel_reward_alpha.rs  claim.rs  deauthorize_funder.rs  flash_deposit.rs  fund_reward.rs  init_farm.rs  init_farmer.rs  init_fixed_farmer.rs  init_probable_farm.rs  init_probable_farmer.rs  lock_reward.rs  mod.rs  refresh_farmer.rs  refresh_farmer_signed.rs  remove_from_bank_whitelist.rs  stake.rs  stake_alpha.rs  treasury_payout.rs  unstake.rs  unstake_alpha.rs  update_farm.rs
programs/magic-stake/src/instructions/alpha_staking/: mod.rs
programs/magic-stake/src/instructions/alpha_tokenswap/: create_alpha_tokenswap.rs  mod.rs  transfer_alpha_tokens.rs
programs/magic-stake/src/instructions/common/: deauthorize_funder.rs  mod.rs
programs/magic-stake/src/instructions/farm_manager/: cancel_reward.rs  fund_reward.rs  init_fixed_farm.rs  init_probable_farm.rs  mod.rs  remove_from_bank_whitelist.rs  treasury_payout.rs
programs/magic-stake/src/instructions/fixed_farm/: init_fixed_farm.rs  mod.rs
programs/magic-stake/src/instructions/probable_farm/: mod.rs
programs/magic-stake/src/state/: authorization_proof.rs  farm.rs  farmer.rs  farmer_lp_rate_reward.rs  farmer_staked_mints.rs  fixed_rewards.rs  mod.rs
programs/magic-stake/src/vrf_actions/: init_state.rs  update_result.rs
(+116 files in other folders)
